--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
 
-  <title>doyolab研究ノート </title>
+  <title>方波見研究ノート </title>
     <!--main.cssというファイルにhtmlのスタイルの詳細を記入し、参照している-->
   <link rel="stylesheet" href="main.css">
 </head>
