--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
         <figcaption>HTMLについて</figcaption>
     </figure>
      <!-------------------------------->
+<figure>
+        <a href="syukudaiindex.html"><img src="images/seidenki_taosu_paper.png" alt=""></a>
+        <figcaption>キックオフ</figcaption>
+    </figure>
+     <!-------------------------------->
 
+    
 </body>
