--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <figcaption>キックオフ</figcaption>
     </figure>
      <!-------------------------------->
-
+<figure>
+        <a href="douyattesusumeteikuka.html"><img src="images/seidenki_taosu_paper.png" alt=""></a>
+        <figcaption>どうやって進めていくか</figcaption>
+    </figure>
+     <!-------------------------------->
     
 </body>
