--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
         <figcaption>どうやって進めていくか</figcaption>
     </figure>
      <!-------------------------------->
-    
+    <figure>
+        <a href="zemikatudou2020.html"><img src="images/seidenki_taosu_paper.png" alt=""></a>
+        <figcaption>ゼミ活動</figcaption>
+    </figure>
+     <!-------------------------------->
 </body>
