--- a/zemikatudou2020.html
+++ b/zemikatudou2020.html
@@ -53,6 +53,8 @@
     <p>5月20日現在、この二つを比べると、右のキャラクターの方が興味関心を引いていることがわかる。
         <br>また、それぞれのキャラクターの性能評価はそれぞれ以下のようになっている。</p>
      <img src="images/mhyouka.png" alt=""> <img src="images/thyouka.png" alt="">
+    <a href="https://gamewith.jp/pricone-re/article/show/203217">左のキャラ</a>
+    <a href="https://gamewith.jp/pricone-re/article/show/170425">右のキャラ</a>
     <p>この評価によると、今回ガチャ実装された左のキャラの方が現状の性能は高い場面が多い。
     
 　　<h2>読んだ論文タイトル及び自身の解釈</h2>
