--- a/zemikatudou2020.html
+++ b/zemikatudou2020.html
@@ -74,6 +74,7 @@
         <br>今回調べてここに書いているときにとても思ったのは<b>どうしても根拠が曖昧になってしまう</b>ということでした。
         <br>例えばこれです↓ <img src="images/0506.png" alt="">
         <br>これは、私が0506のときに書いたものであるが、説得力のあるデータがネット上にあまりなく、どうしても<b>可能性</b>の領域を超えられなかったため、このような書き方になってしまった。このような結果を今後防ぐにはどうすればいいかを考えたところ、アンケートをとるのが一つの方法だと思いました。
+        <br>また、ゼミ内でのアドバイスから、どの要素がどれくらい影響を与えたのかを示す要素の数値化が必要であることがわかったので、次にやることがあれば、あらかじめ関係ありそうな要素を予測しておき、データを探したいと思う。
         
         
 　　
