--- a/index.html
+++ b/index.html
@@ -42,4 +42,9 @@
         <figcaption>ゼミ活動</figcaption>
     </figure>
      <!-------------------------------->
+     <figure>
+        <a href="zemikatudou2020sono2.html"><img src="images/seidenki_taosu_paper.png" alt=""></a>
+        <figcaption>ゼミ活動2</figcaption>
+    </figure>
+     <!-------------------------------->
 </body>
